# wax

./: Cargo.toml
crates/wax-core/: Cargo.toml
crates/wax-core/src/: analysis.rs  build.rs  lib.rs  lowering.rs  rewrite.rs
crates/wax-core/src/analysis/: dce.rs  scf.rs
crates/wax-core/src/lowering/: clean_rets.rs  globalize.rs  tail_calls.rs
